--- a/package.json
+++ b/package.json
@@ -1,18 +1,31 @@
 {
   "name": "mdec-hri",
-  "version": "0.0.0",
-  "private": true,
+  "version": "1.0.0",
+  "description": "Human Robot Interface for Mobile Drone Emergency Communications",
+  "main": "webpack.config.server.js",
   "scripts": {
-    "start": "node ./bin/www"
+    "startserver": "rm -rf ./build && webpack --config webpack.config.server.js"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/eric-tong/mdec-hri.git"
+  },
+  "author": "Eric Tong",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/eric-tong/mdec-hri/issues"
+  },
+  "homepage": "https://github.com/eric-tong/mdec-hri#readme",
   "dependencies": {
-    "cookie-parser": "~1.4.3",
-    "create-react-app": "^2.1.2",
-    "debug": "~2.6.9",
-    "express": "~4.16.0",
-    "http-errors": "~1.6.2",
-    "jade": "~1.11.0",
-    "morgan": "~1.9.0",
-    "react": "^16.7.0"
+    "express": "^4.16.4",
+    "start-server-webpack-plugin": "^2.2.5",
+    "webpack-node-externals": "^1.7.2"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.2.2",
+    "@babel/preset-env": "^7.2.3",
+    "babel-loader": "^8.0.4",
+    "webpack": "^4.28.2",
+    "webpack-cli": "^3.1.2"
   }
 }
