--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,6 @@ scripts/flow/*/.flowconfig
 .grunt
 _SpecRunner.html
 __benchmarks__
-build/
 remote-repo/
 coverage/
 .module-cache
@@ -22,4 +21,4 @@ chrome-user-data
 .vscode
 *.swp
 *.swobuild/
-build/
+.build/
