--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Human Robot Interface for Mobile Drone Emergency Communications",
   "main": "webpack.config.server.js",
   "scripts": {
-    "startserver": "rm -rf ./build && webpack --config webpack.config.server.js"
+    "start:server": "rm -rf ./build && webpack --config  webpack.config.server.js",
+    "start:client": "webpack-dev-server --config webpack.config.client.js",
+    "start": "rm -rf ./.build && npm-run-all --parallel start:server start:client"
   },
   "repository": {
     "type": "git",
@@ -17,8 +19,14 @@
   },
   "homepage": "https://github.com/eric-tong/mdec-hri#readme",
   "dependencies": {
+    "@babel/preset-react": "^7.0.0",
     "express": "^4.16.4",
+    "npm-run-all": "^4.1.5",
+    "react": "^16.7.0",
+    "react-dom": "^16.7.0",
+    "react-hot-loader": "^4.5.3",
     "start-server-webpack-plugin": "^2.2.5",
+    "webpack-dev-server": "^3.1.14",
     "webpack-node-externals": "^1.7.2"
   },
   "devDependencies": {
