--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-hot-loader": "^4.5.3",
+    "react-map-gl": "^4.0.6",
     "start-server-webpack-plugin": "^2.2.5",
     "webpack-dev-server": "^3.1.14",
     "webpack-node-externals": "^1.7.2"
