--- a/package.json
+++ b/package.json
@@ -26,9 +26,9 @@
     "express-graphql": "^0.7.1",
     "graphql": "^14.0.2",
     "npm-run-all": "^4.1.5",
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0",
-    "react-hot-loader": "^4.5.3",
+    "react": "^16.7.0-alpha.2",
+    "react-dom": "^16.7.0-alpha.2",
+    "react-hot-loader": "^4.6.3",
     "react-map-gl": "^4.0.6",
     "start-server-webpack-plugin": "^2.2.5",
     "webpack-dev-server": "^3.1.14",
@@ -38,7 +38,7 @@
     "@babel/core": "^7.2.2",
     "@babel/preset-env": "^7.2.3",
     "babel-loader": "^8.0.4",
-    "webpack": "^4.28.2",
+    "webpack": "^4.28.3",
     "webpack-cli": "^3.1.2"
   }
 }
