--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
   },
   "homepage": "https://github.com/eric-tong/mdec-hri#readme",
   "dependencies": {
+    "@babel/core": "^7.2.2",
+    "@babel/preset-env": "^7.2.3",
     "@babel/preset-react": "^7.0.0",
+    "babel-loader": "^8.0.4",
     "express": "^4.16.4",
     "express-graphql": "^0.7.1",
     "graphql": "^14.0.2",
@@ -29,14 +32,9 @@
     "react-hot-loader": "^4.6.3",
     "react-map-gl": "^4.0.6",
     "start-server-webpack-plugin": "^2.2.5",
+    "webpack": "^4.28.3",
+    "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.14",
     "webpack-node-externals": "^1.7.2"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.2.2",
-    "@babel/preset-env": "^7.2.3",
-    "babel-loader": "^8.0.4",
-    "webpack": "^4.28.3",
-    "webpack-cli": "^3.1.2"
   }
 }
