--- a/package.json
+++ b/package.json
@@ -2,11 +2,9 @@
   "name": "mdec-hri",
   "version": "1.0.0",
   "description": "Human Robot Interface for Mobile Drone Emergency Communications",
-  "main": "webpack.config.server.js",
+  "main": "index.js",
   "scripts": {
-    "start:server": "rm -rf ./build && webpack --config  webpack.config.server.js",
-    "start:client": "webpack-dev-server --config webpack.config.client.js",
-    "start": "rm -rf ./.build && npm-run-all --parallel start:server start:client"
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
@@ -19,22 +17,8 @@
   },
   "homepage": "https://github.com/eric-tong/mdec-hri#readme",
   "dependencies": {
-    "@babel/core": "^7.2.2",
-    "@babel/preset-env": "^7.2.3",
-    "@babel/preset-react": "^7.0.0",
-    "babel-loader": "^8.0.4",
     "express": "^4.16.4",
     "express-graphql": "^0.7.1",
-    "graphql": "^14.0.2",
-    "npm-run-all": "^4.1.5",
-    "react": "^16.7.0-alpha.2",
-    "react-dom": "^16.7.0-alpha.2",
-    "react-hot-loader": "^4.6.3",
-    "react-map-gl": "^4.0.6",
-    "start-server-webpack-plugin": "^2.2.5",
-    "webpack": "^4.28.3",
-    "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.1.14",
-    "webpack-node-externals": "^1.7.2"
+    "graphql": "^14.0.2"
   }
 }
