--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Human Robot Interface for Mobile Drone Emergency Communications",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "heroku-postbuild": "cd client && npm install && npm run build"
   },
   "repository": {
     "type": "git",
