--- a/client/package.json
+++ b/client/package.json
@@ -4,10 +4,10 @@
   "private": true,
   "dependencies": {
     "node-sass": "^4.11.0",
-    "react": "^16.8.0-alpha.0",
-    "react-dom": "^16.8.0-alpha.0",
-    "react-map-gl": "^4.0.6",
-    "react-scripts": "2.1.3"
+    "react": "^16.8.2",
+    "react-dom": "^16.8.2",
+    "react-map-gl": "^4.0.10",
+    "react-scripts": "^2.1.5"
   },
   "scripts": {
     "start": "react-scripts start",
